--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-color: grey;
 }
 
 .App-logo {
@@ -12,18 +13,35 @@
     animation: App-logo-spin infinite 20s linear;
   }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.formContainer{
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  display: grid;
+  grid-gap: 24px;
+  grid-template-columns: 15% 15% 15%;
 }
-
+.formLeft{
+  grid-column: 1;
+  grid-row: 1;
+}
+.formMiddle{
+  grid-row: 1;
+  grid-column: 2;
+}
+.formRight{
+  grid-row: 1;
+  grid-column: 3;
+}
+.formData{
+  grid-column: 2;
+  grid-row: 3;
+}
+.formSubmit{
+  grid-column: 2;
+  grid-row: 2;
+}
+.formSubmit, .formData, .formLeft, .formMiddle, .formRight{
+  border: 3px dotted red;
+}
 .App-link {
   color: #61dafb;
 }
